# LocalAIExecution

./: .gitignore  AGENTS.md  LICENSE  LocalAIExecution-plan.md  LocalAIExecution-spec.md  README.md  config.example.toml  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: docs.instructions.md  image-capability.instructions.md
.github/skills/add-model/: SKILL.md
.github/skills/add-model/references/: templates.md
agent-memory/: ProjectSpec.md  STRUCTURE.md  adding-a-capability.md
docs/: FilesAndModelsStructure.md  HighLevelArchitecture.md  ProjectSpec.md  adding-a-capability.md
human-docs/: FilesAndModelsStructure.md  HighLevelArchitecture.md  skill-invocation.md  validation.md
plans/: LocalAIExecution-plan.md
scripts/: bootstrap.ps1
src/localai/: __init__.py
src/localai/capabilities/: __init__.py
src/localai/capabilities/image/: __init__.py
src/localai/capabilities/image/text_to_image/: __init__.py  adapter.py  cli.py  repl.py
src/localai/capabilities/text_to_image/: __init__.py  adapter.py  cli.py  models.py  repl.py  sizes.py  writer.py
src/localai/core/: __init__.py  cli.py  config.py  engine.py  errors.py  gpu.py  interfaces.py  metadata.py  output.py  registry.py
tests/: conftest.py  test_adapter.py  test_cli.py  test_config.py  test_engine.py  test_error_ux.py  test_errors.py  test_image_writer.py  test_interfaces.py  test_models.py  test_output.py  test_registry.py  test_sizes.py
