[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localai"
version = "0.1.0"
description = "A local AI model execution platform — run AI models on your own GPU. First capability: text-to-image (FLUX)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "LiorZivi" }]
keywords = ["ai", "local", "gpu", "flux", "text-to-image", "diffusers", "cuda"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
]

# NOTE: torch is intentionally NOT listed here — it must be installed from the
# CUDA 12.8 (cu128) wheel index by scripts/bootstrap.ps1 to support the
# Blackwell (sm_120) GPU. Installing torch from PyPI here would pull a build
# that cannot drive the RTX 5090.
dependencies = [
    "diffusers>=0.31.0",
    "transformers>=4.44.0",
    "accelerate>=0.34.0",
    "safetensors>=0.4.3",
    "huggingface_hub>=0.25.0",
    "pillow>=10.3.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
localai = "localai.core.cli:main"

[project.urls]
Homepage = "https://github.com/LiorZivi/LocalAIExecution"
Repository = "https://github.com/LiorZivi/LocalAIExecution"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
